[package]
name = "blockfrost-openapi"
description = "Blockfrost is an API as a service that allows users to interact with the Cardano blockchain and parts of its ecosystem. This crate provides a Rust models for the Blockfrost API."
version = "0.1.75"
authors = ["contact@blockfrost.io"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
uuid = { version = "^1.8", features = ["serde", "v4"] }
